overflow fixed

--- a/mobile.css
+++ b/mobile.css
@@ -258,7 +258,7 @@ main {
   color: #ede6db;
 }
 #albumslidecon {
-  width: 98vw;
+  width: 95vw;
   height: 90vh;
   margin-bottom: 5vh;
   background-image: url(pictures/cinimabg.jpg);
